# company_house_monitoring

./: Cargo.toml  diesel.toml
migrations/2025-03-14-183107_add_inital_tables/: down.sql  up.sql
migrations/2025-03-14-201200_create_processed_update_table/: down.sql  up.sql
migrations/2025-03-14-210221_add_url_to_subscription_table/: down.sql  up.sql
migrations/2025-03-14-213741_create_fks/: down.sql  up.sql
migrations/2025-03-14-222049_add_recieved_at_to_company_snapshot/: down.sql  up.sql
src/: lib.rs  main.rs
src/company_house_sdk/: client.rs  types.rs
src/database/: client.rs  models.rs  schema.rs
src/endpoints/: api_endpoints.rs  mod.rs
src/pulsar/: client.rs  events.rs
src/workers/: mod.rs  notification_worker.rs  process_updates_worker.rs  streaming_worker.rs
