[package]
name = "company_house_monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.40"
diesel = { version = "2.2.8", features = ["postgres", "uuid", "chrono", "serde_json"] }
serde = "1.0.219"
serde_json = "1.0.140"
uuid = { version =  "1.16.0", features = ["serde", "v4", "fast-rng"] }
