[package]
name = "company_house_monitoring"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
anyhow = "1.0.97"
bytes = "1.10.1"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["postgres", "uuid", "chrono", "serde_json"] }
dotenv = "0.15.0"
futures = "0.3.31"
lazy_static = "1.5.0"
pulsar = "6.3.1"
reqwest = { version = "0.12.14", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
uuid = { version =  "1.16.0", features = ["serde", "v4", "fast-rng"] }
